fix(project): history buttons overlap DEV-36 (#6501)
### 💭 Notes

Used `Group` and `ButtonNew` to fix the overlap problem. Buttons labels
are no longer uppercase, as this is against our UI guidelines.

### 👀 Preview steps

1. ℹ️ Have an account and a project with at least 21 deployed versions
(or change `DVCOUNT_LIMIT_MINIMUM` to lower number)
2. Go to Project → Form
3. Click "Show full history"
4. 🔴 [on main] notice that "Hide full history" and "Load more" buttons
overlap and are misaligned
5. 🟢 [on PR] notice that the buttons are aligned and separated (and
labels are sentence case)

--- a/jsapp/scss/components/_kobo.form-view.scss
+++ b/jsapp/scss/components/_kobo.form-view.scss
@@ -195,10 +195,6 @@ $side-tabs-width-mobile: 70px;
   &.historyExpanded .form-view__cell--history-table {
     max-height: 99999px;
   }
-
-  &.historyExpanded .form-view__cell--history-table + .form-view__cell {
-    padding-top: 20px;
-  }
 }
 
 .form-view__cell-label {
